# zinc

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: on-push.yaml  release.yml
franklin-crypto/: Cargo.toml
franklin-crypto/src/: eddsa.rs  group_hash.rs  util.rs
franklin-crypto/src/alt_babyjubjub/: fs.rs  mod.rs  tests.rs
franklin-crypto/src/babyjubjub/: fs.rs
franklin-crypto/src/circuit/: expression.rs  uint32.rs
franklin-crypto/src/circuit/sapling/: mod.rs
franklin-crypto/src/jubjub/: edwards.rs
schnorr/: Cargo.toml
vscode/syntaxes/: zn.tmLanguage.json
zandbox/: Cargo.toml
zargo/: Cargo.toml
zinc-book/src/appendix/: A-grammar-lexical.md  B-grammar-syntax.md
zinc-build/: Cargo.toml
zinc-build/src/instructions/call_library/: function_identifier.rs
zinc-bytecode/: Cargo.toml
zinc-compiler/: Cargo.toml
zinc-compiler/src/: error.rs  lib.rs  main.rs
zinc-compiler/src/semantic/: error.rs  tests.rs
zinc-const/: Cargo.toml
zinc-const/src/: bitlength.rs  size.rs
zinc-lexical/: Cargo.toml
zinc-logger/: Cargo.toml
zinc-manifest/: Cargo.toml
zinc-math/: Cargo.toml
zinc-source/: Cargo.toml
zinc-syntax/: Cargo.toml
zinc-tester/: Cargo.toml
zinc-tester/src/: main.rs
zinc-tester/tests/implementation/: enumeration_constructors.zn  structure_constructor.zn  structure_method_chain.zn
zinc-tester/tests/self/: self_reference.zn
zinc-tester/tests/std/: crypto_pedersen_long_input.zn
zinc-tester/tests/tmp/: crypto_pedersen.zn
zinc-utils/: Cargo.toml
zinc-vm/: Cargo.toml
zinc-vm/src/: lib.rs
zinc-zksync/: Cargo.toml
(+42 files in other folders)
