[package]
name = "zargo"
version = "0.2.0-ING-1"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
edition = "2018"
description = "The Zinc package manager"

[[bin]]
name = "zargo"
path = "src/main.rs"

[dependencies]
log = "0.4"
structopt = "0.3"

failure = "0.1"
anyhow = "1.0"
colored = "2.0"

serde = "1.0"
serde_json = "1.0"
num = "0.3"
rustc-hex = "2.1"
toml = "0.5"
Inflector = "0.11"

tokio = "0.2"
reqwest = "0.10"

zksync = { path = "../zksync-dev/sdk/zksync-rs" }
zksync_types = { path = "../zksync-dev/core/lib/types" }
zksync_utils = { path = "../zksync-dev/core/lib/utils" }
zksync_eth_signer = { path = "../zksync-dev/core/lib/eth_signer" }

num_old = { package = "num", version = "0.2.1" }

zinc-logger = { path = "../zinc-logger" }
zinc-manifest = { path = "../zinc-manifest" }
zinc-const = { path = "../zinc-const" }
zinc-math = { path = "../zinc-math" }
zinc-zksync = { path = "../zinc-zksync" }
